--- a/_bookdown.yml
+++ b/_bookdown.yml
@@ -1,5 +1,5 @@
-book_filename: "index"
-output_dir: "docs"
-ui:
-  chapter_name: ""
 delete_merged_file: true
+language:
+  ui:
+    chapter_name: "chapter"
+output_dir: "docs"
